css/main.css
/* ... */
.dot-menu>label {
    height: 100%;
    position: absolute;
}

.dot-menu label {
    width: 100%;
    cursor: pointer;
}

#showdropmenu:checked ~ .drop-menu {
    top: 0;
}

#showdropmenu:checked ~ .drop-menu-curtine {
    display: block;
}

.drop-menu {
    position: absolute;
    width: 300px;
    height: 360px;
    background: #FAFAFA;
    right: 0;
    top: -500px;
    z-index: 300;
    cursor: initial;
    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);    
}

.drop-menu ul {
    list-style: none;
    padding: 0 20px;
    font-size: 36px;
    line-height: 48px;
    text-align: center;
}

.drop-menu li {
    margin-bottom: 10px;
}

.drop-menu li:hover {
    text-decoration: underline;
}

.drop-menu-curtine {
    display: none;
    position: fixed;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    background: rgba(0,0,0,0.15);
    z-index: 200;
}

.drop-menu-curtine label {
    position: absolute;
    width: 100%;
    height: 100%;
}

.sidebar-curtine {
    position: fixed;
    height: 100%;
    width: 100%;
    top: 0;
    left: -200%;
    transition: all 0.1s cubic-bezier(.25,.8,.25,1);
    background: rgba(0, 0, 0, 0.15);
    box-shadow: 200px 0px 300px rgba(0,0,0,0.15);
    z-index: 200;
}

.sidebar-curtine label {
    position: absolute;
    width: 100%;
    height: 100%;
    cursor: pointer;
}









/* ==========================================================================
   Media Queries
   ========================================================================== */

@media only screen and (min-width: 480px) {

/* ====================
    WIDE: CSS3 Effects
   ==================== */

    .header-container,
    .main aside {
        /*-webkit-box-shadow: 0 5px 10px #aaa;
           -moz-box-shadow: 0 5px 10px #aaa;
                box-shadow: 0 5px 10px #aaa;*/
        right: 50px;
        bottom: 50px;
    }

/* ============
    WIDE: Menu
   ============ */

    .title {
        float: left;
    }

    nav {
        float: right;
        width: 38%;
    }

/* ============
    WIDE: Main
   ============ */

    .main article {
        float: left;
        width: 57%;
    }

}

@media only screen and (max-width: 480px) {
    .header-container {
        background: white;
        height: 60px;
    }

    .header-container header {
        height: 100%;
        padding: 0;
    }

    .burger-menu, .close-burger-menu, .month-icon, .dot-menu {
        width: 45px;
        margin: 0;
    }

    .month-picklist {
        font-size: 18px;
        width: 115px;
    }

    .month-picklist select {
        top: 50%;
        transform: translateY(-50%);
    }

    .month-picklist span {
        right: -2px;
        font-size: 36px;
    }
    /*.right {
        float: left;
    }*/
}

/* ==========================================================================
   Helper classes
   ========================================================================== */

.hidden {
    display: none !important;
    visibility: hidden;
}

.visuallyhidden {
    border: 0;
    clip: rect(0 0 0 0);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 1px;
}

.visuallyhidden.focusable:active,
.visuallyhidden.focusable:focus {
    clip: auto;
    height: auto;
    margin: 0;
    overflow: visible;
    position: static;
    width: auto;
}

.invisible {
    visibility: hidden;
}

.clearfix:before,
.clearfix:after {
    content: " ";
    display: table;
}

.clearfix:after {
    clear: both;
}

.clearfix {
    *zoom: 1;
}

/* ==========================================================================
   Print styles
   ========================================================================== */

@media print {
    *,
    *:before,
    *:after {
        background: transparent !important;
        color: #000 !important;
        box-shadow: none !important;
        text-shadow: none !important;
    }

    a,
    a:visited {
        text-decoration: underline;
    }

    a[href]:after {
        content: " (" attr(href) ")";
    }

    abbr[title]:after {
        content: " (" attr(title) ")";
    }

    a[href^="#"]:after,
    a[href^="javascript:"]:after {
        content: "";
    }

    pre,
    blockquote {
        border: 1px solid #999;
        page-break-inside: avoid;
    }

    thead {
        display: table-header-group;
    }

    tr,
    img {
        page-break-inside: avoid;
    }

    img {
        max-width: 100% !important;
    }

    p,
    h2,
    h3 {
        orphans: 3;
        widows: 3;
    }

    h2,
    h3 {
        page-break-after: avoid;
    }
}

